--- a/firebase.json
+++ b/firebase.json
@@ -2,6 +2,7 @@
   "functions": [
     {
       "source": "functions",
+      "region": "europe-central2",
       "codebase": "default",
       "ignore": [
         "node_modules",
@@ -14,5 +15,16 @@
         "npm --prefix \"$RESOURCE_DIR\" run build"
       ]
     }
-  ]
+  ],
+  "hosting": {
+    "source": ".",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "frameworksBackend": {
+      "region": "europe-west1"
+    }
+  }
 }
