--- a/functions/package.json
+++ b/functions/package.json
@@ -19,6 +19,7 @@
     "firebase-functions": "^4.3.1"
   },
   "devDependencies": {
+    "@types/react": "^19.0.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
