--- a/package.json
+++ b/package.json
@@ -19,53 +19,64 @@
     ]
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.5.1",
-    "@fortawesome/free-brands-svg-icons": "^6.5.1",
-    "@fortawesome/free-regular-svg-icons": "^6.5.1",
-    "@fortawesome/free-solid-svg-icons": "^6.5.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.15",
-    "@stripe/stripe-js": "^2.4.0",
-    "firebase": "^10.7.2",
-    "firebase-admin": "^12.0.0",
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
+    "@fortawesome/free-regular-svg-icons": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.1.0",
+    "@radix-ui/react-avatar": "^1.1.2",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@radix-ui/react-label": "^2.1.1",
+    "@radix-ui/react-separator": "^1.1.1",
+    "@radix-ui/react-slot": "^1.1.1",
+    "@stripe/stripe-js": "^5.3.0",
+    "@typescript-eslint/eslint-plugin": "^8.18.1",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.1",
     "gray-matter": "^4.0.3",
     "js-cookie": "^3.0.5",
-    "mixpanel-browser": "^2.48.1",
-    "next": "^14.2.15",
+    "lucide-react": "^0.468.0",
+    "mixpanel-browser": "^2.56.0",
+    "next": "^15.1.0",
     "next-mdx-remote": "^5.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^9.0.1",
     "react-responsive": "^10.0.0",
     "remark-gfm": "^4.0.0",
-    "stripe": "^14.14.0",
-    "swr": "^2.2.5"
+    "stripe": "^17.4.0",
+    "swr": "^2.2.5",
+    "tailwind-merge": "^2.5.5",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.4.8",
-    "@testing-library/react": "^16.0.0",
-    "@types/jest": "^29.5.12",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.1.0",
+    "@types/jest": "^29.5.14",
     "@types/js-cookie": "^3.0.6",
-    "@types/mixpanel-browser": "^2.48.1",
-    "@types/node": "^20",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
-    "autoprefixer": "^10.0.1",
-    "daisyui": "^4.6.1",
-    "eslint": "^8",
-    "eslint-config-next": "^14.2.15",
-    "husky": "^9.1.4",
+    "@types/mixpanel-browser": "^2.50.2",
+    "@types/node": "^22.10.2",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.2",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.17.0",
+    "eslint-config-next": "^15.1.0",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^15.2.8",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "ts-jest": "^29.2.4",
+    "lint-staged": "^15.2.11",
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.16",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5"
-  }
+    "typescript": "^5.7.2"
+  },
+  "packageManager": "yarn@1.22.22"
 }
