--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.1.0",
+    "@next/mdx": "^15.1.2",
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
     "@radix-ui/react-dropdown-menu": "^2.1.4",
@@ -34,6 +34,7 @@
     "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.1",
     "@stripe/stripe-js": "^5.3.0",
+    "@types/mdx": "^2.0.13",
     "@typescript-eslint/eslint-plugin": "^8.18.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
