--- a/apphosting.yaml
+++ b/apphosting.yaml
@@ -31,6 +31,6 @@ env:
   - variable: NEXT_PUBLIC_FIREBASE_FUNCTIONS_BASE_URL
     value: "https://europe-central2-todo-app-2abf7.cloudfunctions.net"
   - variable: NEXT_PUBLIC_SITE_URL
-    value: "todo-app--todo-app-2abf7.europe-west4.hosted.app"
+    value: "http://todo-app--todo-app-2abf7.europe-west4.hosted.app"
   - variable: NEXT_PUBLIC_ENABLE_BLOG
     value: false
